[package]
name = "mithrandir"
version = "0.1.0"
edition = "2021"
authors = ["Arthur4567321"]
license = "GPL-3.0-or-later"
description = "A build and shell configuration system with dependency management"
repository = "https://github.com/Arthur4567321/Mithrandir"

[lib]
name = "mithrandir"
path = "main.rs"

[[bin]]
name = "mithrandir"
path = "main.rs"

[dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
